--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,30 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.EMEDS"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.SplashSreen"
+            android:exported="true"
+            android:theme="@style/SplashTheme" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".activities.AdminLogin"
             android:exported="true"
             android:label="Admin Login"
             android:parentActivityName=".activities.AdminLogin"
-            android:theme="@style/NewTheme"  />
+            android:theme="@style/NewTheme" />
         <activity
             android:name=".activities.ReadActivity"
             android:exported="true"
@@ -56,11 +68,7 @@
             android:exported="true"
             android:label="E-Meds"
             android:theme="@style/NewTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
